5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_2704.log
== SUBMITION (2019-04-16 13:33:49) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input ("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.1997
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:20) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.234733
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:24) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.182987
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:24) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.34553
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:24) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.274461
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:24) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.373719
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:24) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.523761
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:26) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.111193
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/2704/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:26) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.24719
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:26) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.329576
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:26) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.468125
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:26) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.548441
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:27) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.226689
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:27) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.323191
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:27) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.430828
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:27) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.471221
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:27) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.458553
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:29) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.188481
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:29) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.400938
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:29) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.442347
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:34:29) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)"
							
if(bonificacao.upper() == "S"
	total = nota + nota/100*10
else: 
	total = nota
print(total)
-- EXECUTION TIME:
0.426473
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    total = nota + nota/100*10
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:00:18) 
-- CODE:
nota = float (input("Qual sua nota?"))
bonificacao = input ("Vai receber bonificacao? (S/N)")

if (bonificacao.upper() == "S"):
	total = nota + nota/100*10
else:
	total = nota
	
print (total)
-- EXECUTION TIME:
0.128075
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
